Add Apollo client

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 NODE_PATH=./
+
+REACT_APP_GRAPHQL_URL=https://server-status-graphql.herokuapp.com/graphql
+REACT_APP_SUBSCRIPTIONS_URL=wss://server-status-graphql.herokuapp.com/graphql
