--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react-router-dom": "^5.1.5"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@react-hook/media-query": "^1.1.1",
@@ -17,10 +18,12 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "clsx": "^1.1.1",
+    "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "subscriptions-transport-ws": "^0.9.18",
     "typescript": "~3.7.2"
   },
   "scripts": {
